--- a/My Blog Website/Areas/Admin/Views/Posts/Index.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Posts/Index.cshtml
@@ -9,7 +9,7 @@
 
 
 
-@* <button class="icon-btn add-btn">
+<button class="icon-btn add-btn">
     <div class="add-icon"></div>
     <div class="btn-txt">
         <a asp-action="Create" asp-controller="Posts">Create Post</a>
@@ -65,4 +65,4 @@
         </tr>
 }
     </tbody>
-</table> *@
+</table>
