--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid bg-faded fh5co_padd_mediya padding_786">
+        <div class="container-fluid bg-faded padding_786">
             <div class="container padding_786">
                 <nav class="navbar navbar-toggleable-md navbar-light ">
                     <div class="container-fluid">
@@ -76,7 +76,7 @@
                                     <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item ">
-                                    <a class="nav-link" href="single.html">Thoughts <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" asp-area="" asp-controller="Thoughts" asp-action="Index">Thoughts <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item ">
                                     <a class="nav-link" href="single.html">Technology <span class="sr-only">(current)</span></a>
@@ -94,7 +94,7 @@
                                      <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuButton2" data-toggle="dropdown"
                                      aria-haspopup="true" aria-expanded="false">Portfolio <span class="sr-only">(current)</span></a>
                                     <div class="dropdownmenu-content">
-                                        <a href="#">Live Demonstration</a>
+                                        <a href="">Live Demonstration</a>
                                         <a href="https://graphics.radipu.com/" target="_blank">Graphics</a>
                                         <a href="https://cv.radipu.com/" target="_blank">Resume</a>
                                         <a href="https://radipu.com/" target="_blank">My Intro</a>
