--- a/My Blog Website/Areas/Admin/Views/Posts/Create.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Posts/Create.cshtml
@@ -69,7 +69,7 @@
                     </div>
                     <div class="form-check">
                       <input type="checkbox" class="form-check-input">
-                      <label class="form-check-label">Book </label>
+                      <label class="form-check-label">Book Review</label>
                     </div>
                 </div><hr />
                 <label class="tags">Tags</label>
