both upload image and image url is working

--- a/My Blog Website/Areas/Admin/Views/Posts/Index.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Posts/Index.cshtml
@@ -21,7 +21,7 @@
             <th>SN.</th>
             <th>Title</th>
             <th>Content</th>
-            @* <th>Feature Image</th> *@
+            <th>Feature Image</th>
             <th>Category</th>
             <th>Tags</th>
             @* <th>Author</th> *@
