--- a/My Blog Website/Areas/Admin/Views/Posts/Create.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Posts/Create.cshtml
@@ -42,17 +42,22 @@
                     <hr />
 
                     <label class="featureImageLBL">Feature Image</label>
+                    <!--File Upload-->
                     <div class="custom-file">
-                        <input type="file" class="feature" id="featureImage" name="featureImage" onchange="previewImage(event)">
+                        <input type="file" class="feature" id="featureImage" name="featureImage" onchange="clearUrlInput(); previewImage(event)">
                         <label class="custom-file-label" for="featureImage">Choose file</label>
                     </div>
+                    <!--URL Input-->
                     <div class="mt-3">
                         <label class="featureImageURL">Or</label>
-                        <input type="text" class="form-control" id="featuredImageUrl" oninput="updateImagePreview(this.value)" placeholder="Use Image URL">
+                        <input type="text" class="form-control" id="featuredImageUrl" oninput="clearFileInput(); updateImagePreview(this.value)" placeholder="Use Image URL">
                         <img id="urlImagePreview" src="#" alt="URL Image Preview" style="display:none; width: 300px; margin-top: 10px;">
                     </div>
                     <div class="mt-3">
-                        <img id="featureImagePreview" src="#" alt="Feature Image Preview" style="display:none; width: 300px;">
+                        <div class="mt-3">
+                            <img id="urlImagePreview" src="#" alt="URL Preview" style="display:none; max-width: 300px; margin-top: 10px;">
+                            <img id="featureImagePreview" src="#" alt="File Preview" style="display:none; max-width: 300px; margin-top: 10px;">
+                        </div>
                     </div>
                     <hr />
                 
