database data is showing in the index page

--- a/My Blog Website/Areas/Admin/Views/Posts/Index.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Posts/Index.cshtml
@@ -9,12 +9,12 @@
 
 
 
-<button class="icon-btn add-btn">
+@* <button class="icon-btn add-btn">
     <div class="add-icon"></div>
     <div class="btn-txt">
         <a asp-action="Create" asp-controller="Posts">Create Post</a>
     </div>
-</button>
+</button> *@
 <table class="table">
     <thead>
         <tr class="text-center">
@@ -43,14 +43,16 @@
             <td>
                 @post.PostContent
             </td>
-            @* <td>
-                @if (post.FeatureImage != null)
-                    {
-                        var base64 = Convert.ToBase64String(post.FeatureImage);
-                        var imgSrc = $"data:image/png;base64,{base64}";
-                        <img src="@imgSrc" alt="Feature Image" style="width:100px;" />
-                    }
-            </td> *@
+            <td>
+                @if (!string.IsNullOrEmpty(post.FeatureImageUrl))
+                {
+                    <img src="@post.FeatureImageUrl" alt="Feature Image" style="width: 100px; height: auto;" />
+                }
+                else
+                {
+                    <span>No Image</span>
+                }
+            </td>
             <td>
                 @post.Categories
             </td>
@@ -64,7 +66,14 @@
                 @post.PostStatus
             </td>
             <td>
-                @Html.DisplayFor(modelItem => post.PublishedDate.ToShortDateString())
+                @if (post.PublishedDate.HasValue)
+                {
+                    @post.PublishedDate.Value.ToShortDateString()
+                }
+                else
+                {
+                    <span>Not Published</span>
+                }
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@post.PostId">Edit</a> |
