--- a/My Blog Website/Views/Home/Index.cshtml
+++ b/My Blog Website/Views/Home/Index.cshtml
@@ -1,127 +1,112 @@
-﻿@{
+﻿@model My_Blog_Website.ViewModels.HomeViewModel
+@{
     ViewData["Title"] = "Home";
 }
 
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <body>
+
+<!-- Latest Posts Section -->
 <div class="container-fluid paddding mb-5">
     <div class="row mx-0 hot_topic">
-        <div class="col-md-6 col-12 paddding animate-box" data-animate-effect="fadeIn">
-            <div class="fh5co_suceefh5co_height"><img src="images/nick-karvounis-78711.jpg" alt="img"/>
-                <div class="fh5co_suceefh5co_height_position_absolute"></div>
-                <div class="fh5co_suceefh5co_height_position_absolute_font">
-                    <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Dec 31,2017
-                    </a></div>
-                    <div class=""><a href="single.html" class="fh5co_good_font"> After all is said and done, more is said than done </a></div>
+        @if(Model.LatestPost != null && Model.LatestPost.Any())
+        {
+            <!-- Main Post -->
+            <div class="col-md-6 col-12 paddding animate-box">
+                @{
+                    var mainPost = Model.LatestPost.First();
+                }
+                <div class="fh5co_suceefh5co_height">
+                    <img src="@mainPost.FeatureImageUrl" alt="@mainPost.Title" 
+                         style="width:100%; height:650px; object-fit:cover"/>
+                    <div class="fh5co_suceefh5co_height_position_absolute_font">
+                        <div class="color_fff">
+                            <i class="fa fa-clock-o"></i> 
+                            @mainPost.PublishedDate?.ToString("MMM dd, yyyy")
+                        </div>
+                        <div>
+                            <a asp-action="Single" asp-route-id="@mainPost.PostId" 
+                               class="fh5co_good_font">
+                                @mainPost.Title
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-6">
+
+            <!-- 4 Other Posts -->
+            <div class="col-md-6">
+                <div class="row">
+                    @foreach(var post in Model.LatestPost.Skip(1).Take(4))
+                    {
+                        <div class="col-md-6 col-6 paddding animate-box">
+                            <div class="fh5co_suceefh5co_height_2">
+                                <img src="@post.FeatureImageUrl" alt="@post.Title" 
+                                     style="width:100%; height:300px; object-fit:cover"/>
+                                <div class="fh5co_suceefh5co_height_position_absolute_font_2">
+                                    <div class="color_fff">
+                                        <i class="fa fa-clock-o"></i> 
+                                        @post.PublishedDate?.ToString("MMM dd, yyyy")
+                                    </div>
+                                    <div>
+                                        <a asp-action="Single" asp-route-id="@post.PostId" 
+                                           class="fh5co_good_font_2">
+                                            @post.Title
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    }
+                </div>
+            </div>
+        }
+        else
+        {
+            <div class="col-12 text-center">
+                <p>No posts found!</p>
+            </div>
+        }
+    </div>
+</div>
+
+<!-- Thoughts Section -->
+@if(Model.Thoughts != null && Model.Thoughts.Any())
+{
+    <div class="container-fluid pt-3">
+        <div class="container animate-box">
+            <div>
+                <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Thoughts</div>
+            </div>
             <div class="row">
-                <div class="col-md-6 col-6 paddding animate-box" data-animate-effect="fadeIn">
-                    <div class="fh5co_suceefh5co_height_2"><img src="images/science-578x362.jpg" alt="img"/>
-                        <div class="fh5co_suceefh5co_height_position_absolute"></div>
-                        <div class="fh5co_suceefh5co_height_position_absolute_font_2">
-                            <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Oct
-                                28,2017 </a></div>
-                            <div class=""><a href="single.html" class="fh5co_good_font_2"> After all is said and done, <br>more is said than done </a></div>
+                @foreach(var post in Model.Thoughts)
+                {
+                    <div class="col-md-3 col-6 paddding animate-box">
+                        <div class="fh5co_suceefh5co_height_2">
+                            <img src="@post.FeatureImageUrl" alt="@post.Title" 
+                                 style="width:100%; height:200px; object-fit:cover"/>
+                            <div class="fh5co_suceefh5co_height_position_absolute_font_2">
+                                <div class="color_fff">
+                                    <i class="fa fa-clock-o"></i> 
+                                    @post.PublishedDate?.ToString("MMM dd, yyyy")
+                                </div>
+                                <div>
+                                    <a asp-action="Single" asp-route-id="@post.PostId" 
+                                       class="fh5co_good_font_2">
+                                        @post.Title
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-6 col-6 paddding animate-box" data-animate-effect="fadeIn">
-                    <div class="fh5co_suceefh5co_height_2"><img src="images/joe-gardner-75333.jpg" alt="img"/>
-                        <div class="fh5co_suceefh5co_height_position_absolute"></div>
-                        <div class="fh5co_suceefh5co_height_position_absolute_font_2">
-                            <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Oct 28,2017 </a></div>
-                            <div class=""><a href="single.html" class="fh5co_good_font_2"> After all is said and done... </a></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-6 paddding animate-box" data-animate-effect="fadeIn">
-                    <div class="fh5co_suceefh5co_height_2"><img src="images/ryan-moreno-98837.jpg" alt="img"/>
-                        <div class="fh5co_suceefh5co_height_position_absolute"></div>
-                        <div class="fh5co_suceefh5co_height_position_absolute_font_2">
-                            <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Oct
-                                28,2017 </a></div>
-                            <div class=""><a href="single.html" class="fh5co_good_font_2"> After all is said and done, more is said than done </a></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-6 paddding animate-box" data-animate-effect="fadeIn">
-                    <div class="fh5co_suceefh5co_height_2"><img src="images/10-1-1-875x500.jpg" alt="img"/>
-                        <div class="fh5co_suceefh5co_height_position_absolute"></div>
-                        <div class="fh5co_suceefh5co_height_position_absolute_font_2">
-                            <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Oct
-                                28,2017 </a></div>
-                            <div class=""><a href="single.html" class="fh5co_good_font_2"> After all is said and done, more is said... </a></div>
-                        </div>
-                    </div>
-                </div>
+                }
             </div>
         </div>
     </div>
-</div>
-<div class="container-fluid pt-3">
-    <div class="container animate-box" data-animate-effect="fadeIn">
-        <div>
-            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Thoughts</div>
-        </div>
-        <div class="owl-carousel owl-theme js" id="slider1">
-            <div class="item px-2">
-                <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/allef-vinicius-108153.jpg" alt=""
-                                                           class="fh5co_img_special_relative"/></div>
-                    <div class="fh5co_latest_trading_img_position_absolute"></div>
-                    <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="single.html" class="text-white"> Here's a new way to take better photos for instagram </a>
-                        <div class="fh5co_latest_trading_date_and_name_color"> Walter Johson - March 7,2017</div>
-                    </div>
-                </div>
-            </div>
-            <div class="item px-2">
-                <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/abigail-keenan-65477.jpg" alt="" class="fh5co_img_special_relative"/></div>
-                    <div class="fh5co_latest_trading_img_position_absolute"></div>
-                    <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="single.html" class="text-white"> Here's a new way to take better photos for instagram </a>
-                        <div class="fh5co_latest_trading_date_and_name_color"> Walter Johson - March 7,2017</div>
-                    </div>
-                </div>
-            </div>
-            <div class="item px-2">
-                <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/ryan-moreno-98837.jpg" alt="" class="fh5co_img_special_relative"/></div>
-                    <div class="fh5co_latest_trading_img_position_absolute"></div>
-                    <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="single.html" class="text-white"> Here's a new way to take better photos for instagram </a>
-                        <div class="fh5co_latest_trading_date_and_name_color"> Walter Johson - March 7,2017</div>
-                    </div>
-                </div>
-            </div>
-            <div class="item px-2">
-                <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/science-578x362.jpg" alt="" class="fh5co_img_special_relative"/></div>
-                    <div class="fh5co_latest_trading_img_position_absolute"></div>
-                    <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="single.html" class="text-white"> Here's a new way to take better photos for instagram </a>
-                        <div class="fh5co_latest_trading_date_and_name_color"> Walter Johson - March 7,2017</div>
-                    </div>
-                </div>
-            </div>
-            <div class="item px-2">
-                <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/nick-karvounis-78711.jpg" alt="" class="fh5co_img_special_relative"/></div>
-                    <div class="fh5co_latest_trading_img_position_absolute"></div>
-                    <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="single.html" class="text-white"> Here's a new way to take better photos for instagram </a>
-                        <div class="fh5co_latest_trading_date_and_name_color"> Walter Johson - March 7,2017</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+}
+
+<!-- Repeat same structure for Technology, Ideas, HowTo -->
 <div class="container-fluid pb-4 pt-5">
     <div class="container animate-box">
         <div>
