--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@
                                     <a class="nav-link" href="single.html">HowTo <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item ">
-                                    <a class="nav-link" href="single.html">Travels <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="single.html">Tour <span class="sr-only">(current)</span></a>
                                 </li>
                                 <div class="dropdownmenu">
                                      <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuButton2" data-toggle="dropdown"
