--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -73,22 +73,22 @@
                         <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                             <ul class="navbar-nav mr-auto">
                                 <li class="nav-item active">
-                                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" asp-controller="Home" asp-action="Index">Home <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item ">
-                                    <a class="nav-link" asp-area="" asp-controller="Thoughts" asp-action="Index">Thoughts <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" asp-controller="Thoughts" asp-action="Index">Thoughts <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item ">
-                                    <a class="nav-link" href="single.html">Technology <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" asp-controller="Technology" asp-action="Index">Technology <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item ">
-                                    <a class="nav-link" href="single.html">Ideas <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" asp-controller="Ideas" asp-action="Index">Ideas <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item ">
-                                    <a class="nav-link" href="single.html">HowTo <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" asp-controller="HowTo" asp-action="Index">HowTo <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item ">
-                                    <a class="nav-link" href="single.html">Tour <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" asp-controller="Tour" asp-action="Index">Tour <span class="sr-only">(current)</span></a>
                                 </li>
                                 <div class="dropdownmenu">
                                      <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuButton2" data-toggle="dropdown"
@@ -174,9 +174,9 @@
             <div class="col-12 col-md-3 col-lg-2">
                 <div class="footer_main_title py-3"> Category</div>
                 <ul class="footer_menu">
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; C# & ASP.NET</a></li>
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Book Review</a></li>
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; FAQ</a></li>
+                    <li><a asp-controller="CSharpASPNET" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;&nbsp; C# & ASP.NET</a></li>
+                    <li><a asp-controller="BookReview" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Book Review</a></li>
+                    <li><a asp-controller="FAQ" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;&nbsp; FAQ</a></li>
                 </ul>
             </div>
             <div class="col-12 col-md-5 col-lg-3 position_footer_relative">
